--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "autoarb-monitoring",
-    "version": "1.0.0",
-    "description": "77ME ARB Monitoring - always-on worker",
+    "version": "2.0.0",
+    "description": "66mee ARB Monitoring - always-on worker",
     "main": "index.js",
     "scripts": {
         "start": "node index.js"
